--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "firebase": "^9.22.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
